k8s/userservice/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice-mysql
  template:
    metadata:
      labels:
        app: userservice-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: userservice-mysql-pvc
