k8s/userservice/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-mysql
spec:
  selector:
    app: userservice-mysql
  ports:
    - protocol: TCP
      port: 3306
