k8s/userservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8080
